seerr/seerr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: seerr
  template:
    metadata:
      labels:
        app: seerr
    spec:
      containers:
      - name: seerr
        image: fallenbagel/jellyseerr
        volumeMounts:
        - name: config
          mountPath: /app/config
        ports:
        - containerPort: 5055
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: seerr-config
