seerr/seerr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: media
spec:
  type: LoadBalancer
  ports:
    - port: 5055
      targetPort: 5055
  selector:
    app: seerr
